--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests & Hobbies</a>
         </li>
+        li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#interests">Project</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Achievements</a>
         </li>
