--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests & Hobbies</a>
         </li>
-        li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Project</a>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="projects">Project</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Achievements</a>
