--- a/index.html
+++ b/index.html
@@ -339,6 +339,60 @@
         </ul>
       </div>
     </section>
+     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+      <div class="w-100">
+        <h2 class="mb-5" style="color:red;">Project</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+           <!--Master's-->
+          <div class="resume-content">
+            <h3 class="mb-0">MIT Massachussets Institute of technology</h3>
+            <div class="subheading mb-3">MS Artificial Intelligence</div>
+            </div>
+
+        <div class="resume-date text-md-right">
+            <span class="text-primary">Aug 2020 - Aug 2022</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+           <!--Bachelor's-->
+          <div class="resume-content">
+            <h3 class="mb-0">IIT Mumbai</h3>
+            <div class="subheading mb-3">BS Metallurgical Engineering</div>
+            </div>
+
+        <div class="resume-date text-md-right">
+            <span class="text-primary">Aug 2020 - Aug 2022</span>
+          </div>
+        </div>
+
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+           <!--College Here -->
+          <div class="resume-content">
+            <h3 class="mb-0">The Peace Abbottabad</h3>
+            <div class="subheading mb-3">Pre-Engineering</div>
+            </div>
+
+        <div class="resume-date text-md-right">
+            <span class="text-primary">Aug 2020 - Aug 2022</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+           <!--School Here -->
+          <div class="resume-content">
+            <h3 class="mb-0">Islamia College Peshawar</h3>
+            <div class="subheading mb-3">MS Artificial Intelligence</div>
+            </div>
+
+        <div class="resume-date text-md-right">
+            <span class="text-primary">Aug 2020 - Aug 2022</span>
+          </div>
+        </div>
+        </div>
+    </section>
 
     <hr class="m-0">
 
