--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Interests & Hobbies</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="projects">Project</a>
+          <a class="nav-link js-scroll-trigger" href="#projects">Project</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Achievements</a>
